Fix poor Python API docs formatting (#352)
* Fix poor Python API docs formatting

It appears we made a change at some point that made it so that our
CSS selector no longer selected the Python API docs as intended, leading
to virtually illegible rendering of those docs. Unless I'm mistaken, we
only use these docs for the Pulumi SDK now-a-days, and not the other
providers, so the fix just targets the styles to that section.

This isn't the first time this has happened (see
https://github.com/pulumi/docs/pull/1397), so I'd love to know if there
are any ideas on what we can do to structurally avoid this breaking again!

* Add a custom CSS property to facilitate testing

This adds a custom CSS property to the selected Python SDK section,
so that we can then write a test that validates it got applied
correctly.

--- a/pulumi-hugo/themes/default/assets/sass/_api-python.scss
+++ b/pulumi-hugo/themes/default/assets/sass/_api-python.scss
@@ -22,8 +22,11 @@ div.section[id^="pulumi"] {
     }
 }
 
-// We rely on the Python docs that begin with `<div class="section" id="foo">` to target these styles.
-div.section[id]:not([id=""]) {
+// This selector is for the Pulumi Python SDK page.
+section[id="pulumi-python-sdk"] {
+    // Add a custom property just so that we can run tests to validate its presence.
+    --pulumi-python-sdk: true;
+
     // Don't show the header link - there's an anchorjs link on this header that does the
     // job just as well.
     h1[id$="\B6"],
